--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,3 @@
 @import "tailwindcss";
 @import "./components/Hooks/useRefHook/HandlingForm.style.css";
+@import "./tryityourself/Akash/FormDetails.style.css";
