--- a/src/tryityourself/Akash/FormDetails.style.css
+++ b/src/tryityourself/Akash/FormDetails.style.css
@@ -5,7 +5,7 @@
   @apply text-white hover:cursor-pointer;
 }
 .background {
-  @apply w-full h-screen flex items-center justify-center flex-col bg-slate-950;
+  @apply w-full h-screen flex items-center justify-center flex-col bg-transparent;
 }
 .btn {
   @apply border-1 border-white rounded-md bg-white text-black hover:cursor-pointer p-1;
