--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,4 @@
 @import "./tryityourself/Akash/FormDetails.style.css";
 @import "./tryityourself/Akash/RandomBackground.style.css";
 @import "./project/StopWatch/StopWatch.style.css";
+@import "./tryityourself/Akash/WindowTape.style.css";
