subhajit(tiy-form): All mentioned functionality are included in the form with a minimal design

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,4 @@
 @import "./components/Hooks/useRefHook/HandlingForm.style.css";
 @import "./tryityourself/Akash/FormDetails.style.css";
 @import "./tryityourself/Akash/RandomBackground.style.css";
+@import "./tryityourself/Subhajit/FormDetails.style.css";
